fix spacing net"on"net

--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -166,7 +166,7 @@ body {
 
 #netonnet svg {
     margin-left: -6px;
-    margin-right: -10px;
+    margin-right: -8px;
 }
 
 iframe {
